<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/post_schedule"
        android:icon="@drawable/ic_action_schedule"
        app:showAsAction="ifRoom"
        android:title="@string/schedule_post">
    </item>
    <item
        android:id="@+id/post_publish"
        android:icon="@drawable/ic_action_publish"
        android:title="@string/publish_post">
    </item>
    <item
        android:id="@+id/group_menu_image_dimension"
        android:icon="@drawable/ic_action_show_image"
        android:title="@string/menu_show_image">
    </item>
    <item
        android:id="@+id/post_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit_post_title">
    </item>
    <item
        android:id="@+id/post_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete_post">
    </item>

</menu>