<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/max_fetch_items_count"
        android:hint="@string/max_fetch_items_count"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/newer_than_hours"
        android:hint="@string/newer_than_hours"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"/>

    <CheckBox
        android:id="@+id/delete_on_refresh"
        android:text="@string/delete_on_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>