<?xml version="1.0" encoding="utf-8"?>

<com.ternaryop.widget.ProgressHighlightViewLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/empty"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <TextView
        android:text="@string/start_import_title"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/reading_draft_posts"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/finding_last_published_posts"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</com.ternaryop.widget.ProgressHighlightViewLayout>
