<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/blog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/refreshBlogList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/refreshBlogList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/refresh"
        android:src="@drawable/navigation_refresh"
        app:layout_constraintBottom_toBottomOf="@+id/blog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blog" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/blog"
        app:layout_constraintBottom_toTopOf="@id/post_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/post_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/post_title_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thumbnail" />

    <MultiAutoCompleteTextView
        android:id="@+id/post_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/post_tags_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mru_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_tags" />

</androidx.constraintlayout.widget.ConstraintLayout>